# applescript-mcp

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  server.js
src/applescript_mcp/: __init__.py  __main__.py  server.py
src/applescript_mcp/tools/: __init__.py  macos.py
src/applescript_mcp/utils/: __init__.py  applescript.py
